quick bug fixes